--- a/starwars/public/index.html
+++ b/starwars/public/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script>https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/accordion.css</script>
     <script async src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
